--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
 }
 :root {
     /*Colors*/
@@ -23,12 +24,317 @@
 }
 body {
     margin: 0;
+    overflow: hidden;
+}
+img {
+    max-width: 100%;
+    width: 100%;
+}
+h1 {
+    color: var(--Very-Dark-Desaturated-Violet);
+    font-weight: 500;
+    font-size: 35px;
+    letter-spacing: 0.5px;
+
+}
+h2 {
+    color: var(--White);
+    font-size: 11px;
+    letter-spacing: 0.4px;
+    font-weight: 400;
+    margin: 0;
+}
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+main .left-side {
+    flex: 1;
+
+}
+main .right-side {
+    flex: 1;
+}
+.background-bubble {
+    width: 480px;
+    height: 620px;
+    background-image: linear-gradient(to bottom, var(--Light-Magenta), var(--Light-Violet));
+    border-radius: 0 0 50% 50%;
+    margin-left: -120px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -99;
 }
 
-main .left-side .background-bubble {
-    width: 500px;
-    height: 600px;
-    background-image: linear-gradient(to bottom, var(--Light-Magenta), var(--Light-Violet));
-    border-radius: 0px 0px 50% 50%;
-    margin-left: -150px;
+.phone {
+    width: 250px;
+    height: 500px;
+    border: 10px solid #fff;
+    margin-left: auto;
+    margin-right: 120px;
+    border-radius: 25px;
+    box-shadow: 8px 20px 40px rgba(43, 42, 42, 0.250);
+}
+
+/*Phone Header*/
+.phone-header {
+    flex-direction: row;
+    background-color: #993cff;
+    height: 65px;
+    max-height: 65px;
+    border-radius: 14px 14px 5px 5px;
+    position: relative;
+    padding-top: 27px;
+    padding-left: 8px;
+}
+.phone-header .camera-area {
+    width: 140px;
+    height: 20px;
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    border-radius: 0 0 14px 14px;
+    top: -1px;
+    left: calc(250px / 2 - 140px / 2 - 10px);
+}
+.phone-header .header-info {
+    display: flex;
+    align-items: center;
+}
+.phone-header .go-back-button {
+    display: flex;
+    align-items: center;
+}
+.phone-header .go-back-button .profile-avatar {
+    width: 25px;
+    height: 25px;
+}
+.phone-header .profile-avatar img {
+    border-radius: 50%;
+    border: 0.13rem solid #fff;
+}
+.phone-header .go-back-button .arrow {
+    margin-right: 3px;
+    width: 20px;
+    height: 20px;
+    fill: #fff;
+}
+.phone-header .person-details {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+}
+.phone-header .person-details .person-status {
+    font-size: 8px;
+    color: var(--Pale-Violet);
+    margin-top: 1px;
+}
+.phone-header .hidden-menu-opener {
+    display: flex;
+    height: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: auto;
+    cursor: pointer;
+    padding: 10px 10px;
+    margin-right: 5px;
+
+}
+.phone-header .hidden-menu-opener .dot {
+    background-color: rgba(255, 255, 255, .7);
+    width: 2px;
+    height: 2px;
+    border-radius: 50%;
+}
+
+/*Phone Body*/
+.phone-body {
+    background-color: var(--Light-Grayish-Violet);
+    padding: 10px 7px;
+    font-size: 8px;
+    height: 100%;
+    margin-top: -65px;
+    padding-top: 75px;
+    border-radius: 14px;
+}
+.phone-body .chat {
+    font-size: 9px;
+    padding: 7px 9px;
+    margin-bottom: 7px;
+    max-width: 65%;
+    width: fit-content;
+    line-height: 11px;
+}
+
+.phone-body .chat-left {
+    background-color: #EDE5F4;
+    color: var(--Moderate-Violet);
+    border-radius: 10px 10px 10px 0px;
+}
+.phone-body .chat-right {
+    background-color: var(--White);
+    margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+    border-radius: 10px 10px 0px 10px;
+
+}
+.phone-body .chat.last-message {
+    margin-bottom: 15px;
+}
+.chat-right.shadow {
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, .1);
+}
+.chat.chat-right-images {
+    background-color: transparent;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0px;
+}
+.chat-right-images .image {
+    width: 42px;
+}
+.chat-right-images .image:not(.chat-right-images .image:last-child) {
+    margin-right: 7px;
+}
+.chat-right-images .image img {
+    border-radius: 12px;
+}
+
+.chat.chat-price {
+    background-color: #A83DFF;
+    color: rgba(255, 255, 255, .7);
+    display: flex;
+    align-items: center;
+    max-width: none;
+    width: 75%;
+    font-weight: normal;
+    padding: 9px;
+    padding-right: 15px;
+}
+.chat-price-radio {
+    width: 13px;
+    height: 13px;
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid rgba(255, 255, 255, 0.315);
+    margin-right: 8px;
+}
+.chat-price-price {
+    margin-left: auto;
+    font-size: 12px;
+    font-weight: 700;
+    color: #fff;
+}
+
+.send-message-container {
+    display: flex;
+    align-items: center;
+}
+.send-message-container input {
+    background-color: #FFF;
+    outline: 0;
+    border: 0;
+    border-radius: 50px;
+    padding-left: 15px;
+    width: 100%;
+    height: 35px;
+    font-size: 9px;
+}
+.send-message-container input::placeholder {
+    color: var(--Grayish-Blue)
+}
+.send-message-container button {
+    background-color: var(--Very-Dark-Desaturated-Violet);
+    margin-left: -30px;
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+    border: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.send-message-container button .arrow {
+    width: 15px;
+    height: 15px;
+    fill: #fff;
+    transform: rotate(180deg);
+    margin-left: 1px;
+    margin-bottom: 1px;
+}
+
+/*right-side*/
+.right-side {
+    display: flex;
+    padding-left: 10px;
+}
+.right-side-text {
+    width: 450px;
+}
+.right-side-text p {
+    color: var(--Dark-Grayish-Violet);
+    font-size: 16px;
+    line-height: 27px;
+}
+.background-bubble-right {
+    width: 450px;
+    height: 580px;
+    background-color: #f7f5fa;
+    border-radius: 50% 50% 0 0;
+    margin-right: -140px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -99;
+}
+
+/*responsiviness*/
+@media (max-width: 850px) {
+    body {
+        padding-top: 50px;
+        padding-bottom: 30px; 
+        overflow: auto;
+    }
+    main {
+        flex-direction: column;
+        height: auto;
+    }
+    .phone {
+        margin: 0;
+    }
+    .left-side .background-bubble {
+        width: 374px;
+        height: 473px;
+        margin-left: -200px;
+    }
+    .right-side {
+        margin: 0;
+        margin-top: 60px;
+        padding: 0;
+        text-align: center;
+    }
+    .right-side-text {
+        width: auto;
+        max-width: 650px;
+        padding: 0 20px;
+    }
+    .right-side p {
+        font-size: 15px;
+        line-height: 25px;
+    }
+    .right-side .background-bubble-right {
+        display: none;
+    }
+}
+
+@media (max-width: 850px) and (min-width: 700px) {
+    .left-side .background-bubble {
+        width: 446px;
+        height: 535px;
+        margin-left: -146px;
+    }
 }
