--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,8 @@ main .right-side {
     margin-right: 120px;
     border-radius: 25px;
     box-shadow: 8px 20px 40px rgba(43, 42, 42, 0.250);
+    user-select: none;
+    pointer-events: none;
 }
 
 /*Phone Header*/
@@ -161,7 +163,6 @@ main .right-side {
     border-radius: 14px;
 }
 .phone-body .chat {
-    font-size: 9px;
     padding: 7px 9px;
     margin-bottom: 7px;
     max-width: 65%;
